cleanup: apply some of IDEA/SonarLints suggestions in the test code