@@ -1,10 +1,13 @@
 package org.openzen.scriptingenginetester;
 
+import org.junit.jupiter.api.extension.TestInstantiationException;
 import org.junit.platform.engine.TestDescriptor;
 import org.junit.platform.engine.support.descriptor.AbstractTestDescriptor;
 import org.junit.platform.engine.support.descriptor.ClassSource;
 import org.openzen.scriptingenginetester.cases.TestGroup;
 import org.openzen.scriptingenginetester.cases.TestSuite;
+
+import java.lang.reflect.InvocationTargetException;
 
 public class TestSuiteDescriptor extends AbstractTestDescriptor {
 	private final Class<? extends TestableScriptingEngine> testClass;
@@ -24,8 +27,8 @@ public class TestSuiteDescriptor extends AbstractTestDescriptor {
 
 	public TestableScriptingEngine instantiate() {
 		try {
-			return testClass.newInstance();
-		} catch (InstantiationException | IllegalAccessException e) {
+			return testClass.getConstructor().newInstance();
+		} catch (ReflectiveOperationException e) {
 			throw new RuntimeException(e);
 		}
 	}
